--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/main.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__wrapper">
+          <a href="" class="header__link link-clock"
+            >Работаем ежедневно с 9:00 до 21:00</a
+          >
+          <a href="" class="header__link link-tel"
+            >8 800 777-77-77
+            <span class="link-thin">(Звонок по России бесплатный)</span></a
+          >
+          <a href="" class="header__link link-search">Поиск</a>
+          <a href="" class="header__link">Обратный звонок</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
