--- a/css/main.css
+++ b/css/main.css
@@ -68,4 +68,28 @@ body {
 }
 .header__wrapper {
   padding: 0 425px;
+}
+
+.category__menu {
+  display: flex;
+  gap: 5px;
+  margin-left: 309px;
+}
+
+.category__list {
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #424242;
+}
+
+.dark-one {
+  font-weight: 500;
+  color: #000000;
+}
+
+.category__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37.5px;
+  color: #212121;
 }/*# sourceMappingURL=main.css.map */
