--- a/views/index.html
+++ b/views/index.html
@@ -10,17 +10,77 @@
     <header class="header">
       <div class="container">
         <div class="header__wrapper">
-          <a href="" class="header__link link-clock"
-            >Работаем ежедневно с 9:00 до 21:00</a
-          >
-          <a href="" class="header__link link-tel"
-            >8 800 777-77-77
-            <span class="link-thin">(Звонок по России бесплатный)</span></a
-          >
-          <a href="" class="header__link link-search">Поиск</a>
-          <a href="" class="header__link">Обратный звонок</a>
+          <div class="header__top">
+            <a href="" class="header__link link-clock"
+              >Работаем ежедневно с 9:00 до 21:00</a
+            >
+            <a href="" class="header__link link-tel"
+              >8 800 777-77-77
+              <span class="link-thin">(Звонок по России бесплатный)</span></a
+            >
+            <a href="" class="header__link link-search">Поиск</a>
+            <a href="" class="header__link">Обратный звонок</a>
+          </div>
         </div>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero__wrapper">
+            <div class="hero__info">
+              <h2 class="hero__minititle-1">Обновленный кроссовер</h2>
+              <h1 class="hero__title">CHANGAN CS35 PLUS</h1>
+              <h2 class="hero__minititle-2">от 2 500 000 руб*</h2>
+              <div class="box">
+                <button class="hero__btn">
+                  Гарантия <span class="red">5 лет</span>
+                </button>
+                <button class="hero__btn">
+                  В кредит <span class="red"> 10.5%</span>
+                </button>
+                <button class="hero__btn">
+                  Рассрочка <span class="red">0%</span>
+                </button>
+              </div>
+              <p class="hero__text">
+                *Акционное предложение, точную цену уточняйте у продавца
+              </p>
+            </div>
+          </div>
+          <img
+            src="../scss/pages/main/hero.svg"
+            class="hero__img"
+            alt="red car"
+          />
+          <ul class="hero__menu">
+            <li class="hero__item item-active"></li>
+            <li class="hero__item"></li>
+            <li class="hero__item"></li>
+            <li class="hero__item"></li>
+          </ul>
+        </div>
+      </section>
+      <section class="try">
+        <div class="container">
+          <div class="try__wrapper">
+            <div class="try__top">
+              <h4 class="try__title">Подобрать автомобиль</h4>
+              <div class="try__box">
+                <button class="try__btn btn-active">Новые</button>
+                <button class="try__btn">С пробегом</button>
+                <button class="try__btn">Авто для такси</button>
+              </div>
+            </div>
+            <div class="try__bottom">
+              <div class="try__info info-active">Марка</div>
+              <div class="try__info info-active">Модель</div>
+              <div class="try__info info-double">Цена от Цена до</div>
+              <button class="try__btn-original">Подобрать</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
