--- a/scss/pages/category/_category.scss
+++ b/scss/pages/category/_category.scss
@@ -15,9 +15,317 @@
 	color: $black;
 }
 
-.category__title{
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 37.5px;
-    color: $header-grey;
+.category__title {
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 37.5px;
+	color: $header-grey;
+	margin: 30px 0 40px 309px;
+}
+
+.category__nav2 {
+	display: flex;
+	gap: 395px;
+}
+
+.category__selection {
+	margin-left: 309px;
+	display: flex;
+	gap: 30px;
+}
+
+.selection__btn {
+	width: 160px;
+	height: 40px;
+	border: 1px solid $light-grey;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 18.75px;
+	color: $light-grey;
+	background-color: white;
+	cursor: pointer;
+	text-align: left;
+	padding-left: 10px;
+	border-radius: 4px;
+	position: relative;
+}
+
+.down-arrow {
+	position: absolute;
+	text-align: center;
+	width: 24px;
+	height: 24px;
+	top: 10px;
+	right: 10px;
+}
+
+.selection__btn-red {
+	background-color: $color-red;
+	color: white;
+	text-align: center;
+	border-color: transparent;
+}
+
+.search-first {
+	margin-left: 1069px;
+}
+
+.search__down-arrow {
+	text-align: center;
+}
+
+.category__search {
+	display: flex;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+.search-text {
+	margin-left: 5px;
+	font-size: 14px;
+	line-height: 16.41px;
+	color: $dark-grey;
+}
+
+.first-text {
+	margin-right: 42px;
+}
+
+.search-type__wrapper {
+	display: flex;
+	margin-left: 309px;
+}
+
+.search-type__sort {
+	width: 255px;
+	height: 30px;
+	border: 1px solid $light-grey;
+	background-color: white;
+	border-radius: 6px;
+	font-size: 14px;
+	line-height: 16.41px;
+	color: $black;
+	transition: 0.2s linear;
+	cursor: pointer;
+	text-align: left;
+	padding-left: 15px;
+}
+
+.sort1 {
+	margin-right: 315px;
+	position: relative;
+
+	&::before {
+		content: '';
+		width: 24px;
+		height: 24px;
+		position: absolute;
+		background-image: url(/scss/pages/category/assests/down-arrow2.svg);
+		left: 210px;
+		background-repeat: no-repeat;
+	}
+}
+
+.sort2 {
+	margin-right: 30px;
+	position: relative;
+
+	&::before {
+		content: '';
+		width: 24px;
+		height: 24px;
+		position: absolute;
+		background-image: url(/scss/pages/category/assests/second-btn-things.svg);
+		left: 200px;
+		background-repeat: no-repeat;
+	}
+
+	&::after {
+		content: '';
+		width: 24px;
+		height: 24px;
+		position: absolute;
+		background-image: url(/scss/pages/category/assests/second-btn-things2.svg);
+		left: 224px;
+		background-repeat: no-repeat;
+	}
+}
+
+.search-type__sort:hover {
+	transform: scale(1.1);
+}
+
+.sort3-number {
+	margin-left: 91px;
+	color: $light-grey;
+}
+
+.thirty-six {
+	margin-left: 10px;
+}
+
+.sort3-number__black {
+	color: $black;
+	margin-right: 10px;
+}
+
+.category__hero-item__box {
+	width: 255px;
+	height: 434px;
+	border-radius: 4px;
+	border: 1px solid $light-grey;
+	background-color: white;
+}
+
+.category__hero-item__title {
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 23.44px;
+	color: $black;
+	margin-left: 10px;
+	margin-bottom: 5px;
+}
+
+.category__hero-item__comfort {
+	font-size: 18px;
+	line-height: 21.09px;
+	color: $black;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+
+.category__hero-item__credit {
+	font-size: 12px;
+	line-height: 14.06px;
+	color: $dark-grey;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+
+.category__hero-item__inner-box {
+	display: flex;
+	gap: 5px;
+	flex-wrap: wrap;
+	width: 235px;
+	margin-left: 10px;
+	margin-bottom: 15px;
+}
+
+.inner-box__info {
+	width: 55px;
+	height: 18px;
+	border: 1px solid $light-grey;
+	border-radius: 4px;
+	font-size: 10px;
+	line-height: 11.72px;
+	color: $dark-grey;
+	text-align: center;
+	place-content: center;
+}
+
+.inner-box__info2 {
+	width: 235px;
+}
+
+.category__hero-item__price-info {
+	font-size: 13px;
+	line-height: 15.23px;
+	color: $dark-grey;
+	margin-left: 10px;
+}
+
+.category__hero-item__price-at__numbers {
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 15.23px;
+	color: $black;
+	margin-left: 10px;
+}
+
+.item-price__info2 {
+	margin-bottom: 10px;
+}
+
+.item-price__info3 {
+	margin-bottom: 25px;
+}
+
+.category__hero-item__car-link {
+	margin-left: 10px;
+}
+
+.category__hero-item__info-btn {
+	width: 235px;
+	height: 40px;
+	background-color: $color-red;
+	border-radius: 4px;
+	border-color: transparent;
+	color: white;
+	line-height: 18.75px;
+	transition: 0.2s linear;
+}
+
+.category__hero-item__info-btn:hover {
+	transform: scale(1.1);
+}
+
+.category__hero-wrapper {
+	margin-left: 309px;
+	margin-top: 20px;
+	width: 1110px;
+	display: flex;
+	gap: 30px;
+	flex-wrap: wrap;
+}
+
+.more-cars {
+	margin: 50px 0 40px 704px;
+	width: 320px;
+	height: 60px;
+	border-radius: 4px;
+	border-color: transparent;
+	background-color: $black;
+	color: white;
+	font-weight: 500;
+	line-height: 18.75px;
+	font-size: 1rem;
+}
+
+.more-numbers {
+	width: 434px;
+	height: 18px;
+	margin-left: 667px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.more-number__item {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16.41px;
+	color: $dark-grey;
+	cursor: pointer;
+	transition: 0.1s linear;
+}
+
+.more-number__item:hover {
+	transform: scale(1.2);
+}
+
+.left-arrow:hover {
+	transform: scale(1.2);
+}
+
+.right-arrow:hover {
+	transform: scale(1.2);
+}
+
+.right-arrow {
+	transition: 0.1s linear;
+	cursor: pointer;
+}
+
+.left-arrow {
+	transition: 0.1s linear;
+	cursor: pointer;
 }
