--- a/views/autocredit.html
+++ b/views/autocredit.html
@@ -13,28 +13,29 @@
                 <img src="/scss/pages/autocredit/assets-auto/main logogo.png" alt="" class="header__logo">
                 <ul class="header__bottom-menu">
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text">Новые автомобили</p>
+                        <a href="" class="header__bottom-first-link ">Новые автомобили</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text">С пробегом</p>
+                        <a href="" class="header__bottom-second-link ">С пробегом</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text">Такси в кредит</p>
+                        <a href="" class="header__bottom-third-link">Такси в кредит</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-auto-text">Автокредит</p>
+                        <a href="" class="header__bottom-auto-link">Автокредит</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text">Услуги</p>
+                        <a href="" class="header__bottom-fourth-link">Услуги</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text">О компании</p>
+                        <a href="" class="header__bottom-fifth-link">О компании</a>
                     </li>
                     <li class="header__bottom-list">
-                        <p class="header__bottom-text-contact">Контакты</p>
+                        <a href="" class="header__bottom-link-contact">Контакты</a>
                     </li>
                 </ul>
             </div>
+            <hr>
         </div>
     </header>
 </body>
