--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,11 @@ body {
   padding: 0 425px;
 }
 
+.header__link {
+  font-size: 14px;
+  color: #FFFFFF;
+}
+
 .category__menu {
   display: flex;
   gap: 5px;
@@ -92,4 +97,105 @@ body {
   font-size: 32px;
   line-height: 37.5px;
   color: #212121;
+}
+
+.header__bottom-menu {
+  display: flex;
+  align-items: center;
+  gap: 26px;
+}
+
+.header__bottom {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+  padding: 21px 309px;
+}
+
+.header__bottom-first-link {
+  position: relative;
+  color: black;
+}
+
+.header__bottom-second-link {
+  position: relative;
+  color: black;
+}
+
+.header__bottom-third-link {
+  position: relative;
+  color: black;
+}
+
+.header__bottom-fourth-link {
+  position: relative;
+  color: black;
+}
+
+.header__bottom-fifth-link {
+  position: relative;
+  color: black;
+}
+
+.header__bottom-first-link::before {
+  content: "";
+  position: absolute;
+  background-image: url(/scss/pages/autocredit/assets-auto/Frame\ 9.png);
+  width: 6px;
+  height: 6px;
+  background-size: cover;
+  left: 150px;
+  top: 6px;
+}
+
+.header__bottom-second-link::before {
+  content: "";
+  position: absolute;
+  background-image: url(/scss/pages/autocredit/assets-auto/Frame\ 9.png);
+  width: 6px;
+  height: 6px;
+  background-size: cover;
+  left: 90px;
+  top: 6px;
+}
+
+.header__bottom-third-link::before {
+  content: "";
+  position: absolute;
+  background-image: url(/scss/pages/autocredit/assets-auto/Frame\ 9.png);
+  width: 6px;
+  height: 6px;
+  background-size: cover;
+  left: 117px;
+  top: 6px;
+}
+
+.header__bottom-fourth-link::before {
+  content: "";
+  position: absolute;
+  background-image: url(/scss/pages/autocredit/assets-auto/Frame\ 9.png);
+  width: 6px;
+  height: 6px;
+  background-size: cover;
+  left: 55px;
+  top: 6px;
+}
+
+.header__bottom-fifth-link::before {
+  content: "";
+  position: absolute;
+  background-image: url(/scss/pages/autocredit/assets-auto/Frame\ 9.png);
+  width: 6px;
+  height: 6px;
+  background-size: cover;
+  left: 97px;
+  top: 6px;
+}
+
+.header__bottom-auto-link {
+  color: black;
+}
+
+.header__bottom-link-contact {
+  color: black;
 }/*# sourceMappingURL=main.css.map */
