--- a/scss/base/_resets.scss
+++ b/scss/base/_resets.scss
@@ -1,26 +1,17 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 ul {
-    list-style: none
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-<<<<<<< HEAD
-
-
-
-
-
-=======
-body{
-    font-family: "Roboto";
+body {
+  font-family: "Roboto";
 }
->>>>>>> origin/mirzohid
-
