--- a/scss/pages/_pages.scss
+++ b/scss/pages/_pages.scss
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
-@import "./category/category";
-=======
-@import "./main";
->>>>>>> origin/main
+@import './category/category';
+@import './main';
