--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
               <span class="link-thin">(Звонок по России бесплатный)</span></a
             >
             <a href="" class="header__link link-search">Поиск</a>
-            <a href="" class="header__link">Обратный звонок</a>
+            <a href="" class="header__link link-reverse">Обратный звонок</a>
           </div>
         </div>
       </div>
@@ -75,9 +75,118 @@
             <div class="try__bottom">
               <div class="try__info info-active">Марка</div>
               <div class="try__info info-active">Модель</div>
-              <div class="try__info info-double">Цена от Цена до</div>
+              <div class="try__info info-double">Цена от <span class="do"> Цена до</span> </div>
               <button class="try__btn-original">Подобрать</button>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="brand">
+        <div class="container">
+          <div class="brand__wrapper">
+            <div class="brand__info">
+              <h2 class="brand__title">Продажа автомобилей в Москве</h2>
+              <h4 class="brand__minititle">Посмотреть все</h4>
+            </div>
+            <ul class="brand__menu">
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-1.png" alt="" class="brand__img">
+                <p class="brand__text">Audi</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-2.png" alt="" class="brand__img">
+                <p class="brand__text">BMW</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-3.png" alt="" class="brand__img">
+                <p class="brand__text">BYD</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-4.png" alt="" class="brand__img">
+                <p class="brand__text">Changan</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-5.png" alt="" class="brand__img">
+                <p class="brand__text">Chery</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-6.png" alt="" class="brand__img">
+                <p class="brand__text">Chevrolet</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-7.png" alt="" class="brand__img">
+                <p class="brand__text">Citroen</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-8.png" alt="" class="brand__img">
+                <p class="brand__text">Dongfeng</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-9.png" alt="" class="brand__img">
+                <p class="brand__text">FAW</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-10.png" alt="" class="brand__img">
+                <p class="brand__text">Geely</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-11.png" alt="" class="brand__img">
+                <p class="brand__text">Great Wall</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-12.png" alt="" class="brand__img">
+                <p class="brand__text">Haval</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-13.png" alt="" class="brand__img">
+                <p class="brand__text">Hyundai</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-14.png" alt="" class="brand__img">
+                <p class="brand__text">Jeep</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-15.png" alt="" class="brand__img">
+                <p class="brand__text">JAC</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-16.png" alt="" class="brand__img">
+                <p class="brand__text">KIA</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-17.png" alt="" class="brand__img">
+                <p class="brand__text">Lada</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-18.png" alt="" class="brand__img">
+                <p class="brand__text">Lifan</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-19.png" alt="" class="brand__img">
+                <p class="brand__text">Mazda</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-20.png" alt="" class="brand__img">
+                <p class="brand__text">Nissan</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-21.png" alt="" class="brand__img">
+                <p class="brand__text">Peugeot</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-22.png" alt="" class="brand__img">
+                <p class="brand__text">Renault</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-23.png" alt="" class="brand__img">
+                <p class="brand__text">Skoda</p>
+              </li>
+              <li class="brand__item">
+                <img src="../scss/pages/main/logo-24.png" alt="" class="brand__img">
+                <p class="brand__text">Volkswagen</p>
+              </li>
+            </ul>
+            <button class="brand__btn">Показать еще</button>
           </div>
         </div>
       </section>
