click section added

--- a/views/index.html
+++ b/views/index.html
@@ -190,6 +190,25 @@
           </div>
         </div>
       </section>
+      <section class="click">
+        <div class="container">
+          <div class="click__wrapper">
+            <h2 class="click__title">Заявка в один клик</h2>
+            <p class="click__text">Оставьте заявку и мы подберем для Вас лучшее предложение.</p>
+            <div class="click__info">
+              <div class="click__box click-active">Марка</div>
+              <div class="click__box click-active">Модель</div>
+              <div class="click__box">Ваше имя</div>
+              <div class="click__box">+7 999 999-99-99</div>
+              <button class="click__btn">Оставить заявку</button>
+            </div>
+            <label for="user__accept" class="click__label">
+              <input required type="checkbox" name="user__accept" id="user__accept" class="click__input">
+              <span class="label-text">Я соглашаюсь с <span class="special-text">условиями</span> и даю свое согласие на обработку и использование моих персональных данных</span>
+            </label>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
