--- a/css/main.css
+++ b/css/main.css
@@ -345,4 +345,76 @@ body {
   font-size: 1rem;
   font-weight: 500;
   border-style: none;
+}
+
+.click__wrapper {
+  margin: 0 309px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-image: url("/scss/pages/main/blacj.jpg");
+  color: #FFFFFF;
+}
+
+.click__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.click__text {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.click__info {
+  display: flex;
+  gap: 20px;
+  margin-top: 25px;
+}
+
+.click__box {
+  padding: 20px 15px;
+  width: 190px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  color: #C7C7C7;
+  position: relative;
+}
+
+.click-active::after {
+  content: "";
+  width: 6px;
+  height: 4px;
+  background-image: url("/scss/pages/main/active.png");
+  background-size: cover;
+  position: absolute;
+  top: calc(50% - 2px);
+  right: 25px;
+}
+
+.click__btn {
+  padding: 20px 31px;
+  background-color: #DC4433;
+  border-style: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #FFFFFF;
+}
+
+.click__label {
+  margin-left: 630px;
+  display: flex;
+  gap: 10px;
+}
+
+.label-text {
+  font-size: 10px;
+  font-weight: 400;
+  width: 376px;
+}
+
+.special-text {
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
