--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -223,3 +223,75 @@
   font-weight: 500;
   border-style: none;
 }
+
+.click__wrapper {
+  margin: 0 309px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-image: url("/scss/pages/main/blacj.jpg");
+  color: $white;
+}
+
+.click__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.click__text {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.click__info {
+  display: flex;
+  gap: 20px;
+  margin-top: 25px;
+}
+
+.click__box {
+  padding: 20px 15px;
+  width: 190px;
+  background-color: $white;
+  border-radius: 4px;
+  color: $light-grey;
+  position: relative;
+}
+
+.click-active::after {
+  content: "";
+  width: 6px;
+  height: 4px;
+  background-image: url("/scss/pages/main/active.png");
+  background-size: cover;
+  position: absolute;
+  top: calc(50% - 2px);
+  right: 25px;
+}
+
+.click__btn {
+  padding: 20px 31px;
+  background-color: $color-red;
+  border-style: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: $white;
+}
+
+.click__label {
+  margin-left: 630px;
+  display: flex;
+  gap: 10px;
+}
+
+.label-text {
+  font-size: 10px;
+  font-weight: 400;
+  width: 376px;
+}
+
+.special-text {
+  text-decoration: underline;
+}
