--- a/css/main.css
+++ b/css/main.css
@@ -198,4 +198,23 @@ body {
 
 .header__bottom-link-contact {
   color: black;
+}
+
+.hero__top {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 30px 309px;
+}
+
+.bi-chevron-right {
+  font-size: 10px;
+}
+
+.hero__title {
+  padding: 0 309px;
+}
+
+.hero__text {
+  padding: 30px 309px;
 }/*# sourceMappingURL=main.css.map */
