--- a/views/autocredit.html
+++ b/views/autocredit.html
@@ -1,42 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     <header class="header">
-        <div class="container">
-            <div class="header__bottom">
-                <img src="/scss/pages/autocredit/assets-auto/main logogo.png" alt="" class="header__logo">
-                <ul class="header__bottom-menu">
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-first-link ">Новые автомобили</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-second-link ">С пробегом</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-third-link">Такси в кредит</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-auto-link">Автокредит</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-fourth-link">Услуги</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-fifth-link">О компании</a>
-                    </li>
-                    <li class="header__bottom-list">
-                        <a href="" class="header__bottom-link-contact">Контакты</a>
-                    </li>
-                </ul>
-            </div>
-            <hr>
+      <div class="container">
+        <div class="header__bottom">
+          <img
+            src="/scss/pages/autocredit/assets-auto/main logogo.png"
+            alt=""
+            class="header__logo"
+          />
+          <ul class="header__bottom-menu">
+            <li class="header__bottom-list">
+              <a href="./catogory.html" class="header__bottom-first-link"
+                >Новые автомобили</a
+              >
+            </li>
+            <li class="header__bottom-list">
+              <a href="" class="header__bottom-second-link">С пробегом</a>
+            </li>
+            <li class="header__bottom-list">
+              <a href="" class="header__bottom-third-link">Такси в кредит</a>
+            </li>
+            <li class="header__bottom-list">
+              <a href="" class="header__bottom-auto-link">Автокредит</a>
+            </li>
+            <li class="header__bottom-list">
+              <a href="" class="header__bottom-fourth-link">Услуги</a>
+            </li>
+            <li class="header__bottom-list">
+              <a href="" class="header__bottom-fifth-link">О компании</a>
+            </li>
+            <li class="header__bottom-list">
+              <a href="./contact.html" class="header__bottom-link-contact"
+                >Контакты</a
+              >
+            </li>
+          </ul>
         </div>
+        <hr />
+      </div>
     </header>
-</body>
+    <main>
+      <div class="container">
+        <section class="hero">
+          <div class="hero__top">
+            <p class="hero__top-text">Главная</p>
+            <i class="bi bi-chevron-right"></i>
+            <h4 class="hero__top-title">Автокредит</h4>
+          </div>
+          <h1 class="hero__title">Автокредит в Авто Динамика</h1>
+          <p class="hero__text">
+            Компания Авто Динамика предлагает купить в кредит автомобиль без
+            первоначального взноса. При оформлении автокредита Вы можете выбрать
+            новый или подержанный автомобиль.
+          </p>
+          <div class="hero__main-part">
+            <div class="hero__registration">
+              <div class="hero__reg-right">
+                <h2 class="hero__reg-title">Кредитный калькулятор</h2>
+                <form action="" class="hero__form"></form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
