--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,9 @@
             <div class="try__bottom">
               <div class="try__info info-active">Марка</div>
               <div class="try__info info-active">Модель</div>
-              <div class="try__info info-double">Цена от <span class="do"> Цена до</span> </div>
+              <div class="try__info info-double">
+                Цена от <span class="do"> Цена до</span>
+              </div>
               <button class="try__btn-original">Подобрать</button>
             </div>
           </div>
@@ -90,99 +92,195 @@
             </div>
             <ul class="brand__menu">
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-1.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-1.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Audi</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-2.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-2.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">BMW</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-3.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-3.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">BYD</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-4.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-4.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Changan</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-5.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-5.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Chery</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-6.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-6.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Chevrolet</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-7.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-7.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Citroen</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-8.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-8.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Dongfeng</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-9.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-9.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">FAW</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-10.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-10.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Geely</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-11.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-11.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Great Wall</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-12.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-12.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Haval</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-13.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-13.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Hyundai</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-14.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-14.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Jeep</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-15.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-15.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">JAC</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-16.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-16.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">KIA</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-17.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-17.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Lada</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-18.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-18.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Lifan</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-19.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-19.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Mazda</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-20.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-20.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Nissan</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-21.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-21.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Peugeot</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-22.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-22.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Renault</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-23.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-23.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Skoda</p>
               </li>
               <li class="brand__item">
-                <img src="../scss/pages/main/logo-24.png" alt="" class="brand__img">
+                <img
+                  src="../scss/pages/main/logo-24.png"
+                  alt=""
+                  class="brand__img"
+                />
                 <p class="brand__text">Volkswagen</p>
               </li>
             </ul>
@@ -194,7 +292,9 @@
         <div class="container">
           <div class="click__wrapper">
             <h2 class="click__title">Заявка в один клик</h2>
-            <p class="click__text">Оставьте заявку и мы подберем для Вас лучшее предложение.</p>
+            <p class="click__text">
+              Оставьте заявку и мы подберем для Вас лучшее предложение.
+            </p>
             <div class="click__info">
               <div class="click__box click-active">Марка</div>
               <div class="click__box click-active">Модель</div>
@@ -203,9 +303,156 @@
               <button class="click__btn">Оставить заявку</button>
             </div>
             <label for="user__accept" class="click__label">
-              <input required type="checkbox" name="user__accept" id="user__accept" class="click__input">
-              <span class="label-text">Я соглашаюсь с <span class="special-text">условиями</span> и даю свое согласие на обработку и использование моих персональных данных</span>
+              <input
+                required
+                type="checkbox"
+                name="user__accept"
+                id="user__accept"
+                class="click__input"
+              />
+              <span class="label-text"
+                >Я соглашаюсь с <span class="special-text">условиями</span> и
+                даю свое согласие на обработку и использование моих персональных
+                данных</span
+              >
             </label>
+          </div>
+        </div>
+      </section>
+      <section class="offer">
+        <div class="container">
+          <div class="offer__wrapper">
+            <div class="offer__info">
+              <h2 class="offer__title">Специальные предложения</h2>
+              <h4 class="offer__minititle">Посмотреть все</h4>
+            </div>
+            <ul class="offer__menu">
+              <li class="offer__item">
+                <img src="../scss/pages/main/offer-1.png" alt="" class="offer__img" />
+                <div class="offer__subinfo">
+                  <h3 class="offer__subtitle">HYUNDAI Elantra</h3>
+                  <h4 class="offer__subminititle">Comfort</h4>
+                  <ul class="offer__submenu">
+                    <li class="offer__subitem">
+                      <span class="grey">Год выпуска:</span> 2023
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Тип двигателя:</span> Бензин
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">КПП</span> Автомат
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Объем двиг.(см³):</span> 1893
+                    </li>
+                  </ul>
+                  <h3 class="offer__price">
+                    <span class="grey">Цена от:</span> 10 000 000 руб.
+                  </h3>
+                  <button class="offer__subbtn">Купить</button>
+                </div>
+              </li>
+              <li class="offer__item">
+                <img src="../scss/pages/main/offer-1.png" alt="" class="offer__img" />
+                <div class="offer__subinfo">
+                  <h3 class="offer__subtitle">HYUNDAI Elantra</h3>
+                  <h4 class="offer__subminititle">Comfort</h4>
+                  <ul class="offer__submenu">
+                    <li class="offer__subitem">
+                      <span class="grey">Год выпуска:</span> 2023
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Тип двигателя:</span> Бензин
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">КПП</span> Автомат
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Объем двиг.(см³):</span> 1893
+                    </li>
+                  </ul>
+                  <h3 class="offer__price">
+                    <span class="grey">Цена от:</span> 10 000 000 руб.
+                  </h3>
+                  <button class="offer__subbtn">Купить</button>
+                </div>
+              </li>
+              <li class="offer__item">
+                <img src="../scss/pages/main/offer-2.png" alt="" class="offer__img" />
+                <div class="offer__subinfo">
+                  <h3 class="offer__subtitle">KIA Carnival</h3>
+                  <h4 class="offer__subminititle">Comfort</h4>
+                  <ul class="offer__submenu">
+                    <li class="offer__subitem">
+                      <span class="grey">Год выпуска:</span> 2023
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Тип двигателя:</span> Бензин
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">КПП</span> Вариатор
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Объем двиг.(см³):</span> 1893
+                    </li>
+                  </ul>
+                  <h3 class="offer__price">
+                    <span class="grey">Цена от:</span> 2 000 000 руб.
+                  </h3>
+                  <button class="offer__subbtn">Купить</button>
+                </div>
+              </li>
+              <li class="offer__item">
+                <img src="../scss/pages/main/offer-3.png" alt="" class="offer__img" />
+                <div class="offer__subinfo">
+                  <h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
+                  <h4 class="offer__subminititle">Comfort</h4>
+                  <ul class="offer__submenu">
+                    <li class="offer__subitem">
+                      <span class="grey">Год выпуска:</span> 2023
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Тип двигателя:</span> Бензин
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">КПП</span> Автомат
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Объем двиг.(см³):</span> 1893
+                    </li>
+                  </ul>
+                  <h3 class="offer__price">
+                    <span class="grey">Цена от:</span> 1 400 000 руб.
+                  </h3>
+                  <button class="offer__subbtn">Купить</button>
+                </div>
+              </li>
+              <li class="offer__item">
+                <img src="../scss/pages/main/offer-3.png" alt="" class="offer__img" />
+                <div class="offer__subinfo">
+                  <h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
+                  <h4 class="offer__subminititle">Comfort</h4>
+                  <ul class="offer__submenu">
+                    <li class="offer__subitem">
+                      <span class="grey">Год выпуска:</span> 2023
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Тип двигателя:</span> Бензин
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">КПП</span> Автомат
+                    </li>
+                    <li class="offer__subitem">
+                      <span class="grey">Объем двиг.(см³):</span> 1893
+                    </li>
+                  </ul>
+                  <h3 class="offer__price">
+                    <span class="grey">Цена от:</span> 1 400 000 руб.
+                  </h3>
+                  <button class="offer__subbtn">Купить</button>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
