advantages section added

--- a/css/main.css
+++ b/css/main.css
@@ -507,4 +507,37 @@ body {
   border-style: none;
   font-size: 1rem;
   font-weight: 500;
+}
+
+.advan__wrapper {
+  padding: 0 309px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  color: #212121;
+}
+
+.advan__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.advan__menu {
+  display: flex;
+  gap: 30px;
+}
+
+.advan__item {
+  border-radius: 4px;
+  border: 1px solid #C7C7C7;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  box-shadow: 10px 10px 24px 0px rgba(188, 188, 188, 0.2509803922);
+}
+
+.advan__img {
+  width: 64px;
+  height: 64px;
 }/*# sourceMappingURL=main.css.map */
