--- a/views/index.html
+++ b/views/index.html
@@ -456,6 +456,31 @@
           </div>
         </div>
       </section>
+      <section class="advan">
+        <div class="container">
+          <div class="advan__wrapper">
+            <h2 class="advan__title">Преимущества обращения к нам</h2>
+            <ul class="advan__menu">
+              <li class="advan__item">
+                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
+                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+              </li>
+              <li class="advan__item">
+                <img src="../scss/pages/main/advan-2.png" alt="" class="advan__img">
+                <p class="advan__text">Более 50 банков партнеров с выгодными условиями</p>
+              </li>
+              <li class="advan__item">
+                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
+                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+              </li>
+              <li class="advan__item">
+                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
+                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
