--- a/views/index.html
+++ b/views/index.html
@@ -481,6 +481,15 @@
           </div>
         </div>
       </section>
+      <sectino class="add">
+        <div class="container">
+          <div class="add__wrapper">
+            <img src="../scss/pages/main/add-1.png" alt="" class="add__img add-1">
+            <img src="../scss/pages/main/add-2.png" alt="" class="add__img add-2">
+            <img src="../scss/pages/main/add-3.png" alt="" class="add__img add-3">
+          </div>
+        </div>
+      </sectino>
     </main>
   </body>
 </html>
